--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,5 +29,5 @@ jobs:
     - run: npm install
     - run: npm run lint --if-present
     - run: npm run prettier --if-present
-    - run: npm run test
-    - run: npm run build
+    - run: npm run test --if-present
+    - run: npm run build --if-present
